# evolutionary

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
evolutionary/: NSGAII.py  __init__.py  chromosome.py  context.py  metamodel.py  test.py
evolutionary/tests/: test_chromosome.py  test_context.py  test_example.py  test_nsga2.py
