[tool.poetry]
name = "evolutionary"
version = "0.1.0"
description = "Demonstration of NSGA-II"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
